--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fire-ng",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "An NPM package used by the Fire framework for Angular.",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
+  "scripts": {
+    "deploy": "npm publish"
   },
   "repository": {
     "type": "git",
